[metadata]
name = read-ad
version = 0.7.0
description = COM-based readonly access for Active Directory in Python 3
author = Rainer Schwarzbach
author_email = rainer@blackstream.de
url = https://github.com/blackstream-x/python-read-ad
project_urls =
    Source = https://github.com/blackstream-x/python
    Tracker = https://github.com/blackstream-x/python/issues
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
py_modules = read_ad
install_requires = pywin32
python_requires = >=3.6

